module-3/examples/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: demo-app
spec:
  selector:
    app: whoami
  ports:
    - name: http
      port: 8080
      targetPort: 8080
